# Voice-AI-Agent

./: .gitignore  README.md
backend/: .env.example  config.py  db.py  main.py  pyproject.toml  schemas.py  topics.json
backend/agents/: coach.py
backend/kb/: agent_orchestration.md  chunking_hybrid_retrieval.md  deployment_cost_guards.md  llm_as_judge.md  mcp_basics.md  provider_abstraction.md  rag_eval_metrics.md  reranking.md
backend/kb/user/: README.md
backend/scripts/: prove_session.py
backend/tests/: test_coach_parse.py  test_kb.py  test_scheduler.py
backend/tools/: kb.py  llm.py  scheduler.py
backend/workflows/: add_content.md  deploy.md  run_session.md  tune_engine.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/landing/: Hero.tsx  HowItWorks.tsx  VideoBackground.tsx
frontend/src/components/layout/: Ambience.tsx  Navbar.tsx
frontend/src/components/orb/: Orb.tsx  OrbCanvas.tsx  StaticOrb.tsx  orbShaders.ts
frontend/src/components/progress/: ProgressDashboard.tsx
frontend/src/components/session/: SessionScreen.tsx
frontend/src/lib/: api.ts  usePrefersReducedMotion.ts  useTypewriter.ts  voiceLoop.ts
frontend/src/lib/audio/: analyser.ts  audioBus.ts
frontend/src/lib/speech/: stt.ts  tts.ts
frontend/src/store/: sessionStore.ts  voiceStore.ts
frontend/src/styles/: fonts.css  theme.css
frontend/src/types/: speech.d.ts
