[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
